	- Kaiser Kattail now has two new Aeternite Relic decisions.

✢ Changes:
	- Added some breakthrough bonus effects to the generic griffon and zebra focus tree.
	- Katown Pyramid and Zebtropa Dam projects now spawn landmarks.
	- Miscellaneous DLC related improvements for Kattail's focus tree.

✢ Fixes:
	- Eliminated causes of three different CTDs.
	- Fixed an issue with a special project giving knights too much armour.
	- Fixed the icon in the synthetic mineral growth special project tooltip.
	- Corrected position of monopulse radar in the tech tree.
	- Removed DLC requirements for the future radar special projects.
	- Hopefully removed the last of human infiltrators from changeling models.
	- Fixed the Red Sun Yak Army award not being given.
	- Various fixes for puppeting decisions in Hippogriffia and Chital.
	- Replaced various obsolete tech requirements with special project checks.
	- Restored supremacist Romau's special cosmetic tag for forming the Empire.
	- Fixed an issue with nuclear submarine engines.
	- Miscellaneous bugfixes and improvements.
	- Miscellaneous localisation fixes.

🧭 “Daring Do and the Yaks that SMASH!” 2.3.1.1 🏔️
✢ Additions:
	- Added 26 new landmarks around the world.
	- Added unique icons for several landmarks.
	- Added 24 new dams around the world.
	- Added new scientists for Colthage, Equestria, Hippogriffia, Wittenland, Tobuck and Kattail in Abyssinia.
	- Added a new portrait for Moon Dancer scientist in New Mareland.
	- Added a new advisor in Tobuck.

✢ Changes:
	- Celestial Resistance can now use Equestrian division namelists.
	- Updated Posada content in Hippogriffia to utilize new DLC and update features.
	- Puppeting causes some world tension now.
	- Changelings annexing Olenia via event now causes some world tension.
	- Adjusted AI and balance for the Great War.
	- Encryption key choices in a special project now matter.

✢ Fixes:
	- Fixed an Abyssinian scientist being visible when he shouldn't be.