@@ -750,6 +750,31 @@ buildings = {
 			}
 		}
 	}
+	landmark_grand_temple_boreas = {
+		show_on_map = 1
+		base_cost = 20000
+		damage_factor = 0 # This building can't be damaged by regular strat bombing
+		icon_frame = 22
+		value = 5
+		
+		is_buildable = no
+		disable_grow_animation = yes
+		spawn_point = landmark_spawn
+		repair_speed_factor = @landmark_repair_speed_factor
+		only_display_if_exists = yes
+		special_icon = GFX_palace_of_the_soviets_icon_small # TO CHANGE
+		level_cap = {
+			province_max = 1
+		}
+		always_shown = yes
+		show_modifier = yes
+		country_modifiers = {
+			enable_for_controllers = { GRI }
+			modifiers = {
+				political_power_gain = 0.05
+			}
+		}
+	}
 	#EaW ABY stuff
 	landmark_aby_af_katown_pyramid = {
 		show_on_map = 1
