@@ -1584,8 +1584,7 @@ ideas = {
 			picture = generic_archonism_idea
 			modifier = {
 				fascism_drift = 0.01
-				political_power_gain = 0.05
-				consumer_goods_factor = -0.04
+				consumer_goods_factor = -0.05
     	    }
 		}
 	}
