@@ -196,6 +196,13 @@ entity = { #TODO GTD need custom model
 }
 
 entity = { #TODO GTD need custom model
+	name = "building_landmark_grand_temple_boreas"
+	clone = "building_landmark_spawn"
+
+	default_state = "idle"
+}
+
+entity = { #TODO GTD need custom model
 	name = "building_landmark_aby_af_katown_pyramid"
 	clone = "building_landmark_spawn"
 
