@@ -23,6 +23,7 @@ state={
 			anti_air_building = 1
 			10537 = {
 				landmark_griffenheim_palace = 1
+				landmark_grand_temple_boreas = 1
 				griffenheim_province = 1
 			}
 		}
