@@ -20,9 +20,13 @@
  landmark_palace_of_the_soviets_plural: "$landmark_palace_of_the_soviets$"
  landmark_palace_of_the_soviets_desc: "A massive administrative centre and congress hall in the centre of Stalliongrad, the Palace of the Soviets represents the will of the people and their belief in the triumph of Communism. It took hardship and toil to build, but now it stands for the liberation of all peoples across the world!"
 
- landmark_griffenheim_palace: "The Imperial Palace & The Grand Temple of Boreas"
+ landmark_griffenheim_palace: "The Imperial Palace"
  landmark_griffenheim_palace_plural: "$landmark_griffenheim_palace$"
- landmark_griffenheim_palace_desc: " The Imperial Palace is a huge collection of ornate buildings dedicated to housing the Emperor and his vast court. When Emperor Grover I founded Griffenheim, he first erected a palace for himself, which was then expanded by his successors over the years. It became a miniature city of its own, bustling with activity. After the Revolution of 978 and the Empire's collapse, it was the center of the chaos and suffered widespread damage, which Emperor Grover V spent his entire life meticulously repairing.\n\nMeanwhile, the Grand Temple of Boreas is the home of the Archon of Boreas and is one of the most important religious sites of all griffonkind. It is adorned with gilded domes shimmering in the sun, vast towers reaching high into the sky, and gargantuan statues of Boreas, the head of the griffon pantheon, the king of the gods. The Temple is not only the home of the Archon, but also of many leading figures of the cult of Boreas. Hundreds of clergygriffons work there, assisted by thousands of servants."
+ landmark_griffenheim_palace_desc: " The Imperial Palace is a huge collection of ornate buildings dedicated to housing the Emperor and his vast court. When Emperor Grover I founded Griffenheim, he first erected a palace for himself, which was then expanded by his successors over the years. It became a miniature city of its own, bustling with activity. After the Revolution of 978 and the Empire's collapse, it was the center of the chaos and suffered widespread damage, which Emperor Grover V spent his entire life meticulously repairing."
+ 
+ landmark_grand_temple_boreas: "The Grand Temple of Boreas"
+ landmark_grand_temple_boreas_plural: "$landmark_grand_temple_boreas$"
+ landmark_grand_temple_boreas_desc: "The Grand Temple of Boreas is the home of the Archon of Boreas and is one of the most important religious sites of all griffonkind. It is adorned with gilded domes shimmering in the sun, vast towers reaching high into the sky, and gargantuan statues of Boreas, the head of the griffon pantheon, the king of the gods. The Temple is not only the home of the Archon, but also of many leading figures of the cult of Boreas. Hundreds of clergygriffons work there, assisted by thousands of servants."
 
  landmark_canterlot_castle: "The Canterlot Castle"
  landmark_canterlot_castle_plural: "$landmark_canterlot_castle$"
