@@ -10,6 +10,7 @@
 	- Added some breakthrough bonus effects to the generic griffon and zebra focus tree.
 	- Katown Pyramid and Zebtropa Dam projects now spawn landmarks.
 	- Miscellaneous DLC related improvements for Kattail's focus tree.
+	- Separated the Imperial Palace and the Grand Temple of Boreas landmarks.
 
 ✢ Fixes:
 	- Eliminated causes of three different CTDs.
